--- a/FabricMultiHostDeployment/setup1/vm2/docker-compose.yaml
+++ b/FabricMultiHostDeployment/setup1/vm2/docker-compose.yaml
@@ -86,6 +86,14 @@ services:
       - ./crypto-config/peerOrganizations/org2.example.com/peers/peer0.org2.example.com/tls:/etc/hyperledger/crypto/peer/tls
       - /var/run/:/host/var/run/
       - ./:/etc/hyperledger/channel/
+    extra_hosts:
+      - "orderer.example.com:10.40.41.163"
+      - "orderer2.example.com:10.40.41.163"
+      - "orderer3.example.com:10.40.41.163"
+      - "peer0.org1.example.com:10.40.41.14"
+      - "peer1.org1.example.com:10.40.41.14"
+      - "peer0.org3.example.com:10.40.41.163"
+      - "peer1.org3.example.com:10.40.41.163"
     networks:
       - test
 
@@ -128,5 +136,13 @@ services:
       - ./crypto-config/peerOrganizations/org2.example.com/peers/peer1.org2.example.com/tls:/etc/hyperledger/crypto/peer/tls
       - /var/run/:/host/var/run/
       - ./:/etc/hyperledger/channel/
+    extra_hosts:
+      - "orderer.example.com:10.40.41.163"
+      - "orderer2.example.com:10.40.41.163"
+      - "orderer3.example.com:10.40.41.163"
+      - "peer0.org1.example.com:10.40.41.14"
+      - "peer1.org1.example.com:10.40.41.14"
+      - "peer0.org3.example.com:10.40.41.163"
+      - "peer1.org3.example.com:10.40.41.163"
     networks:
       - test
