--- a/FabricMultiHostDeployment/setup1/vm1/docker-compose.yaml
+++ b/FabricMultiHostDeployment/setup1/vm1/docker-compose.yaml
@@ -93,12 +93,12 @@ services:
       - ./:/etc/hyperledger/channel/
     extra_hosts:
       - "orderer.example.com:10.40.41.163"
-      - "orderer2.example.com:10.40.41.163"
-      - "orderer3.example.com:10.40.41.163"
-      - "peer0.org2.example.com:10.40.41.164"
-      - "peer1.org2.example.com:10.40.41.164"
-      - "peer0.org3.example.com:10.40.41.163"
-      - "peer1.org3.example.com:10.40.41.163"
+      # - "orderer2.example.com:10.40.41.163"
+      # - "orderer3.example.com:10.40.41.163"
+      # - "peer0.org2.example.com:10.40.41.164"
+      # - "peer1.org2.example.com:10.40.41.164"
+      # - "peer0.org3.example.com:10.40.41.163"
+      # - "peer1.org3.example.com:10.40.41.163"
 
     networks:
       - test
@@ -144,12 +144,12 @@ services:
       - ./:/etc/hyperledger/channel/
     extra_hosts:
       - "orderer.example.com:10.40.41.163"
-      - "orderer2.example.com:10.40.41.163"
-      - "orderer3.example.com:10.40.41.163"
-      - "peer0.org2.example.com:10.40.41.164"
-      - "peer1.org2.example.com:10.40.41.164"
-      - "peer0.org3.example.com:10.40.41.163"
-      - "peer1.org3.example.com:10.40.41.163"
+      # - "orderer2.example.com:10.40.41.163"
+      # - "orderer3.example.com:10.40.41.163"
+      # - "peer0.org2.example.com:10.40.41.164"
+      # - "peer1.org2.example.com:10.40.41.164"
+      # - "peer0.org3.example.com:10.40.41.163"
+      # - "peer1.org3.example.com:10.40.41.163"
     networks:
       - test
 
@@ -186,9 +186,9 @@ services:
       - ./../vm4/crypto-config/ordererOrganizations/example.com/:/etc/hyperledger/channel/crypto-config/ordererOrganizations/example.com/
     extra_hosts:
       - "orderer.example.com:10.40.41.163"
-      - "orderer2.example.com:10.40.41.163"
-      - "orderer3.example.com:10.40.41.163"
-      - "peer0.org2.example.com:10.40.41.164"
-      - "peer1.org2.example.com:10.40.41.164"
-      - "peer0.org3.example.com:10.40.41.163"
-      - "peer1.org3.example.com:10.40.41.163"
+      # - "orderer2.example.com:10.40.41.163"
+      # - "orderer3.example.com:10.40.41.163"
+      # - "peer0.org2.example.com:10.40.41.164"
+      # - "peer1.org2.example.com:10.40.41.164"
+      # - "peer0.org3.example.com:10.40.41.163"
+      # - "peer1.org3.example.com:10.40.41.163"
